# astral-assessment

./: .env.templ  README.md  main.py  pyproject.toml  requirements.txt
api/: types.py
api/routers/: health.py  register.py
core/clients/: firecrawl.py
core/config/: settings.py
features/extraction/: linkedin_analysis.py  processor.py
outputs/: analysis_20250903_143022.json
tests/: test_cases.py
